--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# cache, phpstorm directories
+*Thumbs.db
+*.DS_Store
+*.empty
+.idea
 
 ###> symfony/framework-bundle ###
 /.env.local
@@ -8,3 +13,14 @@
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
+
+###> symfony/phpunit-bridge ###
+.phpunit
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
+
+###> friendsofphp/php-cs-fixer ###
+/.php_cs
+/.php_cs.cache
+###< friendsofphp/php-cs-fixer ###
