--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,43 @@
 {
+    "name": "sbs/symfony-basic",
+    "description": "",
     "type": "project",
     "license": "proprietary",
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        "php": ">=7.2.5",
+        "php": "^7.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/doctrine-bundle": "^2.3",
+        "doctrine/doctrine-migrations-bundle": "^3.0",
+        "doctrine/orm": "^2.8",
         "symfony/console": "5.2.*",
         "symfony/dotenv": "5.2.*",
-        "symfony/flex": "^1.3.1",
+        "symfony/flex": "^1.12",
         "symfony/framework-bundle": "5.2.*",
+        "symfony/monolog-bundle": "^3.0",
+        "symfony/proxy-manager-bridge": "5.2.*",
+        "symfony/security-bundle": "5.2.*",
+        "symfony/twig-bundle": "5.2.*",
         "symfony/yaml": "5.2.*"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^2.18",
+        "phpmd/phpmd": "^2.9",
+        "phpstan/phpstan": "^0.12",
+        "phpstan/phpstan-doctrine": "^0.12",
+        "phpstan/phpstan-phpunit": "^0.12",
+        "phpstan/phpstan-symfony": "^0.12",
+        "phpstan/phpstan-webmozart-assert": "^0.12",
+        "symfony/browser-kit": "5.2.*",
+        "symfony/css-selector": "5.2.*",
+        "symfony/debug-bundle": "5.2.*",
+        "symfony/maker-bundle": "^1.30",
+        "symfony/phpunit-bridge": "5.2.*",
+        "symfony/stopwatch": "5.2.*",
+        "symfony/var-dumper": "5.2.*",
+        "symfony/web-profiler-bundle": "5.2.*"
     },
     "config": {
         "optimize-autoloader": true,
@@ -54,7 +78,7 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": true,
             "require": "5.2.*"
         }
     }
