--- a/composer.json
+++ b/composer.json
@@ -9,18 +9,25 @@
         "php": "^7.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
         "doctrine/doctrine-bundle": "^2.3",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.8",
+        "jms/serializer-bundle": "^3.9",
+        "stof/doctrine-extensions-bundle": "^1.6",
         "symfony/console": "5.2.*",
         "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.12",
+        "symfony/form": "5.2.*",
         "symfony/framework-bundle": "5.2.*",
         "symfony/monolog-bundle": "^3.0",
         "symfony/proxy-manager-bridge": "5.2.*",
         "symfony/security-bundle": "5.2.*",
         "symfony/twig-bundle": "5.2.*",
-        "symfony/yaml": "5.2.*"
+        "symfony/uid": "5.2.*",
+        "symfony/validator": "5.2.*",
+        "symfony/yaml": "5.2.*",
+        "webmozart/assert": "^1.10"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.18",
