--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -1,6 +1,9 @@
 controllers:
     resource: ../../src/Controller/
     type: annotation
+    prefix: /api/{version}
+    requirements:
+        version: v\d+
 
 kernel:
     resource: ../../src/Kernel.php
